Secure API Keys Implementation

--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,18 @@ PERPLEXITY_MODEL=sonar-reasoning
 DEEPSEEK_API_KEY=sk-ff0f3f69ba9e4ef8949b201ccba7f1a1
 DEEPSEEK_MODEL=deepseek-reasoner
 
+# External API Keys
+# Historical Data API Key
+HISTORICAL_DATA_API_KEY=your_historical_data_api_key_here
+
+# Support & Resistance API Key
+SUPPORT_RESISTANCE_API_KEY=your_support_resistance_api_key_here
+
 # Example format:
 # PRIMARY_AI_PROVIDER=perplexity
 # PERPLEXITY_API_KEY=pplx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # PERPLEXITY_MODEL=sonar-reasoning
 # DEEPSEEK_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # DEEPSEEK_MODEL=deepseek-reasoner
+# HISTORICAL_DATA_API_KEY=lmt_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+# SUPPORT_RESISTANCE_API_KEY=your_api_key_here
